# nodal_analysis

./: README.md  pyproject.toml  requirements.txt
docker/: Dockerfile
nodal_analysis/: main.py  service.py  settings.py
nodal_analysis/schemas/: __init__.py  request.py
