[tool.poetry]
name = "nodal-analysis"
version = "0.1.0"
description = ""
authors = ["Chaban Sergey <loriston@rambler.ru>"]
readme = "README.md"
packages = [{include = "nodal_analysis"}]
exclude = [
            "nodal_analysis/certs",
            "nodal_analysis/service.py",
            "nodal_analysis/settings.py",
            "nodal_analysis/main.py",
        ]
 

[tool.poetry.dependencies]
python = "3.11.1"

aiohttp = "3.9.3"
pika = "1.3.2"
pydantic = "2.4.2"
pydantic-settings = "2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
pytest = "^8.0.0"


[tool.poetry.group.custom.dependencies]
common-core = {path = "../common/common_core", develop = true}
common-rabbit = {path = "../common/common_rabbit", develop = true}
gateway-service = {path = "../gateway_service", develop = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
